--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 							}
 							console.log(speaking);
 						};
-						console.log(timeoutID = setTimeout(timeoutCallback, 3000));
+						timeoutID = setTimeout(timeoutCallback, 3000);
 					} catch (error) {
 						// Catch and log any errors that occur within the function
 						console.error("An error occurred:", error);
