--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					console.error("Geolocation is not supported by this browser.");
 				}
 			}
-			// Function to calculate the distance between two coordinates using Haversine formula
+			// Function to calculate the distance between two coordinates using Haversine formula.
 			function calculateDistance(lat1, lon1, lat2, lon2) {
 				const earthRadius = 6371e3; // Earth radius in meters
 				const phi1 = (lat1 * Math.PI) / 180; // Latitude in radians
